Fix overflow styling.

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -2,6 +2,7 @@ $sidebar-background: $medium-gray;
 
 .main {
   padding: 0 !important;
+  overflow: scroll;
 }
 
 .photo-container {
@@ -10,7 +11,6 @@ $sidebar-background: $medium-gray;
   align-items: center;
   max-height: 100vh;
   min-height: 95vh;
-  overflow: scroll;
 
   #photo {
     max-height: 100vh;
@@ -20,11 +20,12 @@ $sidebar-background: $medium-gray;
 
 .sidebar {
   background: $sidebar-background;
+  box-shadow: -2px 0 4px 0 rgba(0, 0, 0, 0.1), -2px 0 6px 0 rgba(0, 0, 0, 0.09);
   color: darken($sidebar-background, 48);
   height: 100vh;
   overflow-wrap: break-word;
   overflow-y: scroll;
-  z-index: 2;
+  z-index: 1;
 
   h6 {
     margin-bottom: 20px;
